# synapse-l4

./: .env.example  .gitignore  CLAUDE.md  LEARNING_LOG.md  OBSERVABILITY_MIGRATION_PLAN.md  README.md  config.py  learning_log_qa.csv  main.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.observability/: phase-1-complete
docs/: AGENT_DIRECTIVES.md  API.md  ARCHITECTURE.md  DEV_GETTING_STARTED.md  TESTING.md  journal.md
docs/adr/: 0001-fastapi-over-flask-django.md  0002-instructor-for-structured-generation.md  0003-frozen-pydantic-axioms.md  0004-judge-as-separate-pipeline-stage.md  0005-uv-over-poetry.md  0006-websockets-for-eventhorizon-client.md  0007-deduplication-delegated-to-sentinel.md  0008-live-ollama-test-tier.md
docs/journal/: synapse-l4-2026-06-17T0502-journal-anki-precommit-hook.md  synapse-l4-2026-07-18T2026-saas-domain-support.md  synapse-l4-20260331-axiomdraft-model-extractor-node.md  synapse-l4-20260331-emitter-sentinel-l7-client.md  synapse-l4-20260331-judge-pass-business-rules.md  synapse-l4-20260331-project-scaffold-axiom-contract.md
docs/probes/: phase-1-project-scaffold.md  phase-2-extractor.md  phase-3-judge.md  phase-4-emitter.md  synapse-l4-2026-06-17T0502-journal-anki-precommit-hook.md  synapse-l4-2026-07-18T2026-saas-domain-support.md
scripts/: migrate_journal.py  probe_to_anki.py
src/api/: ingest.py  ingest_test.py
src/clients/: eventhorizon.py  eventhorizon_test.py  sentinel.py  sentinel_test.py
src/evaluation/: rules.py  rules_test.py
src/models/: axiom.py  axiom_test.py
(+11 files in other folders)
